--- a/styles/admin/style.css
+++ b/styles/admin/style.css
@@ -135,6 +135,16 @@ body {
     animation: widthAnimation 1s;
 }
 
+@keyframes widthAnimation {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
 .areNew {
     margin-top: 10px;
     color: var(--secondary);
@@ -165,12 +175,12 @@ body {
     box-shadow: 2px 2px 10px var(--success), -2px -2px 10px var(--success);
 }
 
-@keyframes widthAnimation {
-    0% {
-        width: 0%;
-    }
-
-    100% {
-        width: 100%;
-    }
+.wait-gif{
+    width: 200px;
 }
+
+.request-table{
+    border: 1px;
+}
+
+
